--- a/Week 2 Exercise.qmd
+++ b/Week 2 Exercise.qmd
@@ -30,9 +30,9 @@ In archaeology, it's always good to center place in every beginning of the repor
 
     hint: for AUTHOR NAMES, you can write something like 'FIRST AUTHOR'S LAST NAME et al.' or 'FIRST AUTHOR'S LAST NAME and colleagues'.
 
--   [x ] After writing that into your report, create a new subheading (a heading 3) in your report. You can do this by starting the line with three hashtags. Label this heading 'Traits'
+-   \[x \] After writing that into your report, create a new subheading (a heading 3) in your report. You can do this by starting the line with three hashtags. Label this heading 'Traits'
 
--   [ x] In subheading 'Traits', write at least one sentence about each of the three traits you've chosen. Note the name of the trait, the type of data (of the four types), units (if applicable). In actual reports, you'd rarely note the type of data it is, but let's do it to practice.
+-   \[ x\] In subheading 'Traits', write at least one sentence about each of the three traits you've chosen. Note the name of the trait, the type of data (of the four types), units (if applicable). In actual reports, you'd rarely note the type of data it is, but let's do it to practice.
 
     Example: Thickness refers to the maximum thickness of the artifact. A continuous trait, thickness was measured in centimeters. Platform Surface (Platform.Surface in the dataframe) is a categorical trait describing the nature of the striking platform on the proximal portion of the lithic flake.
 
@@ -49,7 +49,7 @@ We can use R to create a table of the qualitative data.
 table(df$Platform.Surface)
 ```
 
--   [ ] Within your report, copy/paste/modify the code above to create a table for any qualitative data you've chosen to examine more closely. Write any percentage values that seem useful.
+-   [x] {Within your report, copy/paste/modify the code above to create a table for any qualitative data you've chosen to examine more closely. Write any percentage values that seem useful.
 
 Example: 'Regarding platform surfaces, 8/46 (17%) are plain.' HINT: I calculated the percentage here by first tabulating the data using table(), and then dividing the number of plain surfaces by the total number of observations in the console, then multiplying by 100. `8/46*100`
 
@@ -60,7 +60,7 @@ Then, let's summarize the quantitative data you've chosen to examine. Next week,
 hist(df$Thickness)
 ```
 
--   [ x] Within your report, copy/paste/modify the code above to create histograms for any quantitative data you've chosen to examine more closely. Describe any trends you see. Example: 'Plotting thickness, the data skew slightly right.'
+-   \[ x\] Within your report, copy/paste/modify the code above to create histograms for any quantitative data you've chosen to examine more closely. Describe any trends you see. Example: 'Plotting thickness, the data skew slightly right.'
 
 Then, you'll plot a scatterplot of the two variables you chose. (Hint, if you're ever wondering how to do something, you can put a ? in front of the function you're interested in learning more about. Try `?plot()` in the console).
 
@@ -71,14 +71,13 @@ I'm going to grab Mass as another numeric value, just for this example (you're s
 plot(df$Thickness, df$Width)
 ```
 
--   [ x] Within your report, copy/paste/modify the code above to create a scatter plot of the two quantitative variables you've chosen to examine more closely. Describe any trends you see. Example: 'Plotting thickness on the x axis and width on the y axis, the variables appear positively correlated.'
--   [ x] Cite the paper as the data source as the last part of the report. Write something like 'Data source:' and then the paper, Chicago style. The paper can be found [here](https://doi.org/10.1371/journal.pone.0287490).
--   [ ] Final task: rename the title and author of this quarto document (reminder, it's up top)
+-   \[ x\] Within your report, copy/paste/modify the code above to create a scatter plot of the two quantitative variables you've chosen to examine more closely. Describe any trends you see. Example: 'Plotting thickness on the x axis and width on the y axis, the variables appear positively correlated.'
+-   \[ x\] Cite the paper as the data source as the last part of the report. Write something like 'Data source:' and then the paper, Chicago style. The paper can be found [here](https://doi.org/10.1371/journal.pone.0287490).
+-   \[ P\] Final task: rename the title and author of this quarto document (reminder, it's up top)
 
 ## Report
 
 <!--# this is where you'll drop in your report, following the instructions above marked as tasks. Be sure to drop them in order so they make sense -->
-
 
 Benjamin et al recorded stone artifacts (n =269) from Mrurujuga Coastline North West Aurstraila (Last Glacial Period 110000-10,000 Cal BP). They recorded traits like (elevation), (mass), (quality)
 
@@ -88,12 +87,12 @@ Benjamin et al recorded stone artifacts (n =269) from Mrurujuga Coastline North 
 #| label: tabulate categorical data
 table(df$elevation.mass)
 ```
+
 ```{r}
 #|: label: example numeric data histogram
 hist(df$Mass)
 ```
-```{r}
-#|: label: example numeric data scatterplot
-plot(df$elevation, df$Mass)
+
+\`\`\`{r} #\|: label: example numeric data scatterplot plot(df$elevation, df$Mass)
 
 Datasource:Benjamin, Jonathan, Michael O’Leary, Jo McDonald, Chelsea Wiseman, John McCarthy, Emma Beckett, Patrick Morrison, et al. 2020. “Aboriginal artefacts on the continental shelf reveal ancient drowned cultural landscapes in northwest Australia.” PLoS ONE 15 (7): e0233912. https://doi.org/10.1371/journal.pone.0233912.
